packages/fiori/src/themes/SideNavigationItemBase.css
:host {
	display: block;
}

.ui5-sn-item-ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

.ui5-sn-item {
	display: flex;
	align-items: center;
	width: auto;
	box-sizing: border-box;
	text-decoration: none;
	position: relative;
	min-height: var(--_ui5_side_navigation_item_height);
	cursor: pointer;
	color: inherit;
	background-color: var(--sapList_Background);
	border-radius: var(--_ui5_side_navigation_item_border_radius);
	transition: var(--_ui5_side_navigation_item_transition);
}

:host(:not([in-popover])) .ui5-sn-item {
	margin-block-end: var(--_ui5_side_navigation_item_bottom_margin);
}

:host(.ui5-sn-item-hidden[side-nav-collapsed]),
:host([side-nav-collapsed]) .ui5-sn-item-hidden {
	display: none;
}

:host([side-nav-collapsed]) .ui5-sn-item {
	transition: none;
}

:host([design="Action"]) {
	color:  var(--sapButton_TextColor);
}

:host([design="Action"]) .ui5-sn-item:not(.ui5-sn-item-disabled):active [ui5-icon],
:host([design="Action"]) .ui5-sn-item:not(.ui5-sn-item-disabled):active .ui5-sn-item-text {
	color: var(--_ui5_side_navigation_active_text_color);
}

:host([design="Action"]) .ui5-sn-item {
	border: var(--sapButton_BorderWidth) solid var(--sapButton_BorderColor);
	box-sizing: content-box;
}

:host([design="Action"]:not([side-nav-collapsed])) .ui5-sn-item {
	max-width: -moz-available;
	max-width: -webkit-fill-available;
	max-width: fill-available;
}

:host([design="Action"]) .ui5-sn-item:not(.ui5-sn-item-disabled):hover {
	border: var(--_ui5_side_navigation_action_item_border_hover);
	background: var(--sapButton_Hover_Background);
}

:host([design="Action"]) .ui5-sn-item:not(.ui5-sn-item-disabled):active {
	border: var(--_ui5_side_navigation_action_item_border_active);
	background: var(--sapButton_Active_Background);
}

.ui5-sn-item:focus {
	outline: none;
}

:host([desktop]) .ui5-sn-item:focus::after,
.ui5-sn-item:focus-visible::after  {
	border: var(--sapContent_FocusWidth) var(--sapContent_FocusStyle) var(--sapContent_FocusColor);
	position: absolute;
	content: "";
	inset: var(--_ui5_side_navigation_item_focus_border_offset);
	z-index: 3;
	pointer-events: none;
	border-radius: var(--_ui5_side_navigation_item_focus_border_radius);
}

.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected:focus::before {
	border: var(--_ui5_side_navigation_selected_and_focused_border_style_color);
}

.ui5-sn-item.ui5-sn-item-group::before,
.ui5-sn-item.ui5-sn-item-level1::before {
	border: var(--_ui5_side_navigation_group_border_style_color);
	border-width: var(--_ui5_side_navigation_group_border_width);
}

.ui5-sn-item-group[aria-expanded="true"]::before,
.ui5-sn-item-level1[aria-expanded="true"]::before {
	border-width: var(--_ui5_side_navigation_group_expanded_border_width);
}

/* borders are drawn using a pseudo element.
in some themes, the border is drawn only on the bottom.
In high contrast themes, the border is present on all sides,
and there is an additional border that appears on hover. */
.ui5-sn-item::before {
	content: "";
	position: absolute;
	inset: 0;
	pointer-events: none;
}

.ui5-sn-item.ui5-sn-item-disabled {
	cursor: default;
}

.ui5-sn-item.ui5-sn-item-disabled > * {
	opacity: var(--sapContent_DisabledOpacity);
}

.ui5-sn-item.ui5-sn-item-disabled::after {
	opacity: 1;
}

:host([ui5-side-navigation-item][in-popover][unselectable]) .ui5-sn-item {
	cursor: unset;
}

:host(:not([ui5-side-navigation-item][in-popover][unselectable])) .ui5-sn-item:not(.ui5-sn-item-disabled):not(.ui5-sn-item-selected):hover {
	background: var(--sapList_Hover_Background);
}

.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected {
	background: var(--_ui5_side_navigation_collapsed_selected_item_background);
}

.ui5-sn-item:not(.ui5-sn-item-disabled):active .ui5-sn-item-text,
.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-active .ui5-sn-item-text {
	color: var(--sapList_Active_TextColor);
}

.ui5-sn-item:not(.ui5-sn-item-disabled):active [ui5-icon],
.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-active [ui5-icon] {
	color: var(--sapList_Active_TextColor);
}

.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected:hover {
	background: var(--_ui5_side_navigation_collapsed_selected_item_background_hover);
}

.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected:active,
.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected.ui5-sn-item-active,
:host(:not([ui5-side-navigation-item][in-popover][unselectable])) .ui5-sn-item:not(.ui5-sn-item-disabled):active,
.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-active,
:host([side-nav-collapsed]) .ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected:active,
:host([side-nav-collapsed]) .ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected.ui5-sn-item-active {
	background: var(--sapList_Active_Background);
}

.ui5-sn-item::before {
	border: var(--_ui5_side_navigation_item_border_style_color);
	border-width: var(--_ui5_side_navigation_item_border_width);
}

:host([side-nav-collapsed]) .ui5-sn-item::before {
	border-width: var(--_ui5_side_navigation_item_border_width);
}

.ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected::before {
	border: var(--_ui5_side_navigation_selected_border_style_color);
	border-width: var(--_ui5_side_navigation_selected_border_width);
}

:host(:not([design="Action"])) .ui5-sn-item:not(.ui5-sn-item-disabled):not(.ui5-sn-item-selected):hover::before {
	border: var(--_ui5_side_navigation_hover_border_style_color);
	border-width: var(--_ui5_side_navigation_hover_border_width);
}

:host([side-nav-collapsed]) .ui5-sn-item:not(.ui5-sn-item-disabled).ui5-sn-item-selected::before {
	border-radius: var(--_ui5_side_navigation_item_border_radius);
}

:host([in-popover]:last-of-type) .ui5-sn-item:not(:hover):not(:active)::before {
	border: var(--_ui5_side_navigation_last_item_border_style);
}

.ui5-sn-item-icon {
	color: var(--_ui5_side_navigation_icon_color);
	padding-inline-start: 1rem;
	padding-inline-end: var(--_ui5_side_navigation_icon_padding_inline_end);
}
/* ... */

